--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+<link rel="stylesheet" href="css/style.css">
+    <title>Rosy's Flowers Boutique:</title>
   </head>
   <body>
+     <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand">~Flower Boutique~</a>
+      <form class="form-inline">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">HOME</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">ABOUT</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">CALENDER</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Appoinments</button>
+      </form>
+     </nav>
+
+     <span class="dot"></span>
+  <!-- I DON"T KNOW HOW TO MAKE THE CIRCLE RESPONSIVE.LIKE IN A LITTLE SCREEN OR MEDIA SCREEn
+  -->
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
