--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Appoinments</button>
        </form>
       </nav>
-      <span class="dot"></span>
+      <!-- <span class="dot"></span> -->
     </div>
   </div>
 
   <div class="row tall">
-    <div class="col-lg-4 col-md-4 col-sm-12 yellow">
+    <div class="col-lg-4 col-md-4 col-sm-4 yellow">
       <h1>PERFECT</h1>
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -40,36 +40,36 @@
           <div class="carousel-item active">
             <img src="img/get well.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>Gerdening</h5>
+              <p>A get well gift for your most love</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/orange.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5>orange Flowers</h5>
+              <p>For tables decodering </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/pink.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Pink flowers</h5>
+              <p>Wedding gift to the marry couples</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/scarlet.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Roses and Flowers</h5>
+              <p>For the one you love the most</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/spring.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Spring flowers</h5>
+              <p>for the best picnic party </p>
             </div>
           </div>
         </div>
@@ -85,12 +85,12 @@
     </div>
 
 
-    <div class="col-lg-4 col-md-4 col-sm-12 pink">
+    <div class="col-lg-4 col-md-4 col-sm-4 pink">
       <h1 class="space">ROSY'S</h1>
 
     </div>
 
-    <div class="col-lg-4 col-md-4 col-sm-12 yellow">
+    <div class="col-lg-4 col-md-4 col-sm-4 yellow ">
       <h1>GIFT</h1>
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -102,36 +102,36 @@
           <div class="carousel-item active">
             <img src="img/blue.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>blue flowers</h5>
+              <p>For sad moments and good moments</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/flowers.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5>light pink flowers</h5>
+              <p>For a best friend</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/rose.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Roses</h5>
+              <p>For your girlfriend and boyfriend</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/white.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>White roses</h5>
+              <p> For a family member that you adore</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/yellow.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Yewllo flowers</h5>
+              <p>A presenty for someone special</p>
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <h1 class=""><h1>Hello, world!</h1>
+      <h1 class=""><h1>Come and discover the perfect gift for anyone! </h1>
 
     </div>
   </div>
