--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-light bg-light">
        <a class="navbar-brand">~Flower Boutique~</a>
        <form class="form-inline">
-         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="https://jpablo18.github.io/client-website-/?">HOME</button>
+         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >HOME</button>
          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">ABOUT</button>
          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">CALENDER</button>
          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Appoinments</button>
