--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Rosy's Flowers Boutique:</title>
   </head>
   <body>
-<div class="container-fluid">
+<div class="">
   <div class="row">
     <div class="col-lg-12">
       <nav class="navbar navbar-light bg-light">
